# tldiagram-mcp

./: .env  Dockerfile  README.md  main.py  pyproject.toml
tests/: test_integration.py
