[project]
name = "diag-mcp"
version = "0.1.0"
description = "FastMCP server exposing the Diag DiagramService for LLM consumption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

# ── buf.build generated SDK packages (available for typed client usage) ──────
# Install with:
#   uv add 'tldiagramcom-diagram-connectrpc-python==0.8.1.1.20260314125855+797ce5104d2d' \
#          --index https://buf.build/gen/python
#   uv add 'tldiagramcom-diagram-protocolbuffers-python==34.0.0.1.20260314125855+797ce5104d2d' \
#          --index https://buf.build/gen/python
#   uv add 'tldiagramcom-diagram-grpc-python==1.78.1.1.20260314125855+797ce5104d2d' \
#          --index https://buf.build/gen/python

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
